# mle-on-aws-book

./: .dockerignore  .gitignore  .sagify.json  Dockerfile  README.md  build.sh  playground.ipynb  pyproject.toml
local_test/: deploy_local.sh
local_test/test_dir/model/: model.pth
prediction/: predict.py  prediction.py  predictor.py  serve
scripts/: build.py  local.py
training/: train
